Ensure that everything within a fieldset is aligned to the left

--- a/css/aguapop/forms.css
+++ b/css/aguapop/forms.css
@@ -11,6 +11,7 @@ margin:auto;
 padding-top:7px;
 margin-bottom:4px;
 border-radius:7px;
+text-align:left;
 }
 
 form legend {
