--- a/css/arc-dark/forms.css
+++ b/css/arc-dark/forms.css
@@ -14,6 +14,7 @@ margin-top:4px;
 margin-right:4px;
 border-radius:7px;
 vertical-align:top;
+text-align:left;
 }
 
 form legend {
