--- a/css/professional-rtl/forms.css
+++ b/css/professional-rtl/forms.css
@@ -14,6 +14,7 @@ padding-top:7px;
 margin-bottom:4px;
 border-radius:7px;
 direction:rtl;
+text-align:left;
 }
 
 form legend {
