--- a/css/xenos/forms.css
+++ b/css/xenos/forms.css
@@ -14,6 +14,7 @@ margin-bottom:4px;
 border-radius:7px;
 box-shadow: 4px 4px 5px rgba(50, 50, 50, 0.75);
 width:51%;
+text-align:left;
 }
 
 form legend {
